@@ -18,6 +18,9 @@
             $(WXTOPDIR)src/generic/dirdlgg.cpp
             $(WXTOPDIR)src/generic/filedlgg.cpp
         </if>
+        <if cond="TOOLKIT=='GTK' and TOOLKIT_VERSION=='2'">
+            $(WXTOPDIR)src/generic/filedlgg.cpp
+        </if>
         <if cond="TOOLKIT=='PM' and WXUNIV=='0' and SHARED=='0'">
             $(WXTOPDIR)src/generic/fontdlgg.cpp
             $(WXTOPDIR)src/generic/filedlgg.cpp
